k8s-manifests/awsIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health
  namespace: deleteme
  annotations:
    external-dns.alpha.kubernetes.io/aws-evaluate-target-health: "true"
    external-dns.alpha.kubernetes.io/aws-health-check-id: "2c415a10-2c72-4821-b8f1-646c26ac6049"
    external-dns.alpha.kubernetes.io/hostname: "yyy.dev-app.snglr.com"
    external-dns.alpha.kubernetes.io/aws-failover: PRIMARY
    external-dns.alpha.kubernetes.io/set-identifier: main
    external-dns.alpha.kubernetes.io/alias: "true"
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    # alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - host: "yyy.dev-app.snglr.com"
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: health
                port:
                  number: 80
